5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1723_2504.log
== SUBMITION (2019-05-14 11:19:38) 
-- CODE:
qc = int(input("quant. inicial : "))
ql = int(input("quant. inicial: "))
pv = int(input("perc. virus: "))
pl = int(input("perc. leucocitos: "))

dia = 0

while(ql<=2*qv):
	qv = qv + (qv + (pv/100))
	ql = ql +(ql + (pl/100))
	dia = dia + 1
	
print(dia)
-- EXECUTION TIME:
0.148325
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2504/main.py", line 8, in <module>
    while(ql<=2*qv):
NameError: name 'qv' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:19:39) 
-- CODE:
qc = int(input("quant. inicial : "))
ql = int(input("quant. inicial: "))
pv = int(input("perc. virus: "))
pl = int(input("perc. leucocitos: "))

dia = 0

while(ql<=2*qv):
	qv = qv + (qv + (pv/100))
	ql = ql +(ql + (pl/100))
	dia = dia + 1
	
print(dia)
-- EXECUTION TIME:
0.188633
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2504/main.py", line 8, in <module>
    while(ql<=2*qv):
NameError: name 'qv' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:19:40) 
-- CODE:
qc = int(input("quant. inicial : "))
ql = int(input("quant. inicial: "))
pv = int(input("perc. virus: "))
pl = int(input("perc. leucocitos: "))

dia = 0

while(ql<=2*qv):
	qv = qv + (qv + (pv/100))
	ql = ql +(ql + (pl/100))
	dia = dia + 1
	
print(dia)
-- EXECUTION TIME:
0.14309
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2504/main.py", line 8, in <module>
    while(ql<=2*qv):
NameError: name 'qv' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:20:05) 
-- CODE:
qc = int(input("quant. inicial : "))
ql = int(input("quant. inicial: "))
pv = int(input("perc. virus: "))
pl = int(input("perc. leucocitos: "))

dia = 0

while(ql <= 2 * qv):
	qv = qv + (qv * (pv/100))
	ql = ql +(ql * (pl/100))
	dia = dia + 1
	
print(dia)
-- EXECUTION TIME:
0.183659
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2504/main.py", line 8, in <module>
    while(ql <= 2 * qv):
NameError: name 'qv' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:20:06) 
-- CODE:
qc = int(input("quant. inicial : "))
ql = int(input("quant. inicial: "))
pv = int(input("perc. virus: "))
pl = int(input("perc. leucocitos: "))

dia = 0

while(ql <= 2 * qv):
	qv = qv + (qv * (pv/100))
	ql = ql +(ql * (pl/100))
	dia = dia + 1
	
print(dia)
-- EXECUTION TIME:
0.184588
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2504/main.py", line 8, in <module>
    while(ql <= 2 * qv):
NameError: name 'qv' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
